--- a/rooms.html
+++ b/rooms.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hotel [RP HOTEL] - Kamar</title>
+    <title>Hotel RP HOTEL- Kamar</title>
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
@@ -11,7 +11,7 @@
     <header>
         <div class="container">
             <div class="logo">
-                <h1>[RP HOTEL]</h1>
+                <h1>RP HOTEL</h1>
             </div>
             <nav>
                 <ul>
@@ -71,7 +71,7 @@
     <!-- Footer -->
     <footer>
         <div class="container">
-            <p>&copy; 2024 [RP HOTEL]. Semua Hak Dilindungi.</p>
+            <p>&copy; 2024 RP HOTEL. Semua Hak Dilindungi.</p>
         </div>
     </footer>
 </body>
