--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
             </div>
             <nav>
                 <ul>
-                    <li><a href="home.html">Beranda</a></li>
+                    <li><a href="index.html">Beranda</a></li>
                     <li><a href="rooms.html">Kamar</a></li>
                     <li><a href="amenities.html">Fasilitas</a></li>
                     <li><a href="gallery.html">Galeri</a></li>
