--- a/galeri.html
+++ b/galeri.html
@@ -30,44 +30,58 @@
             </div>
         </nav>
     </header>
-    </div>
-</nav>
+            </div>
+        </nav>
+    </header>
 </nav>
 <a href="contact.html" class="btn-book">Pesan Sekarang</a>
 </div>
 </header>
-<main>
-    <section id="kegiatan" class="kegiatan">
-        <h2>Fasilitas</h2>
-        <p>RP HOTEL Memiliki Beberapa Fasilitas. Berikut adalah beberapa Fasilitas RP HOTEL:</p>
-        <ul>
-            <section id="gallery" class="gallery">
-                <div class="container">
-                    <h2>Fasilitas</h2>
-                    <div class="gallery-images">
-                    </figure>
-                        <img src="kolam.jpg" alt="Kolam Renang RP HOTEL">
-                        <figcaption>Kolam Renang RP HOTEL</figcaption>
-                    </figure>
-                    <figure>
-                        <img src="spa.jpeg" alt="SPA RP HOTEL">
-                        <figcaption>SPA RP HOTEL </figcaption>
-                    </figure>
-                    <figure>
-                        <img src="gym.jpeg" alt="Pusat Kebugaran ">
-                        <figcaption>Pusat Kebugaran RP Hotel </figcaption>
-                    </figure>
-                    <figure>
-                        <img src="resto.jpeg" alt="Resto RP Hotel Menyediakan makanan internasional">
-                        <figcaption>Resto RP Hotel Menyediakan makanan internasional </figcaption>
-                    </figure>
-                    
-            </section>
-                          
+ <!-- Gallery Section -->
+ <section id="gallery" class="gallery">
+    <div class="container">
+        <h2>Galeri</h2>
+        <div class="gallery-images">
+            <figure>
+                <img src="1.jpeg" alt="Logo RP Hotel">
+                <figcaption>Logo RP Hotel</figcaption>
+            </figure>
+            <figure>
+                <img src="2.jpeg" alt="Air Terjun di Bengkulu">
+                <figcaption>Air Terjun di Bengkulu</figcaption>
+            </figure>
+            <figure>
+                <img src="3.jpeg" alt="Benteng Fort Marlborough">
+                <figcaption>Benteng Fort Marlborough</figcaption>
+            </figure>
+            <figure>
+                <img src="ROOM 1.jpeg" alt="Kamar Superior">
+                <figcaption>Kamar Superior</figcaption>
+            </figure>
+            <figure>
+                <img src="ROOM 2.jpeg" alt="Kamar Deluxe">
+                <figcaption>Kamar Deluxe</figcaption>
+            </figure>
+            <figure>
+                <img src="ROOM 5.jpeg" alt="Kamar Junior Suite">
+                <figcaption>Kamar Junior Suite</figcaption>
+            </figure>
+            <figure>
+                <img src="ROOM 4.jpeg" alt="Kamar Suite">
+                <figcaption>Kamar Suite</figcaption>
+            </figure>
+            <figure>
+                <img src="ROOM 3.jpeg" alt="Kamar Presidential Suite">
+                <figcaption>Kamar Presidential Suite</figcaption>
+            </figure>
+        </div>
+    </div>
+</section>
+
 <!-- Footer -->
 <footer>
     <div class="container">
-        <p>&copy; 2024 RP HOTEL. Semua Hak Dilindungi.</p> <!-- Menambahkan nama hotel yang konsisten -->
+        <p>&copy; 2024 RP Hotel. Semua Hak Dilindungi.</p>
     </div>
 </footer>
 </body>
