--- a/index.html
+++ b/index.html
@@ -4,42 +4,50 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hotel RP Hotel - Beranda</title>
+    <!-- Tambahkan Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
     <!-- Header -->
-    <header>
-        <div class="container">
-            <div class="logo"><img src="" alt="">
-                <h1>RP HOTEL</h1>
+    <header class="bg-white">
+        <nav class="navbar navbar-expand-lg navbar-light bg-white py-3 fixed-top shadow-sm">
+            <div class="container px-4">
+                <a class="navbar-brand fw-bold text-primary" href="index.html">RP HOTEL</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav ms-auto">
+                        <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                        <li class="nav-item"><a class="nav-link" href="rooms.html">Kamar</a></li>
+                        <li class="nav-item"><a class="nav-link" href="galeri.html">Galeri</a></li>
+                        <li class="nav-item"><a class="nav-link" href="amenities.html">Fasilitas</a></li>
+                        <li class="nav-item"><a class="nav-link" href="kontak.html">Kontak</a></li>
+                    </ul>
+                    <a href="contact.html" class="btn btn-primary ms-lg-3">Pesan Sekarang</a>
+                </div>
             </div>
-            <nav>
-                <ul>
-                    <li><a href="index.html">Beranda</a></li>
-                    <li><a href="rooms.html">Kamar</a></li>
-                    <li><a href="amenities.html">Fasilitas</a></li>
-                    <li><a href="gallery.html">Galeri</a></li>
-                    <li><a href="contact.html">Kontak</a></li>
-                </ul>
-            </nav>
-            <a href="contact.html" class="btn-book">Pesan Sekarang</a>
-        </div>
+        </nav>
     </header>
+<!-- Hero Section -->
+<section id="home" class="hero d-flex align-items-center" style="min-height: 100vh; background: url('lobby.jpeg') no-repeat center center; background-size: cover;">
+    <div class="container text-center">
+        <h2 class="fw-bold text-white">Rasakan Kenyamanan dan Kemewahan</h2>
+        <p class="lead text-white">Selamat Datang Di RP Hotel, Tempat Yang Menyajikan Pengalaman Menginap Yang Tak Terlupakan.</p>
+        <a href="contact.html" class="btn btn-primary btn-lg">Pesan Sekarang</a>
+    </div>
+</section>
 
-    <!-- Hero Section -->
-    <section id="home" class="hero">
-        <div class="hero-content">
-            <h2>Rasakan Kenyamanan dan Kemewahan</h2>
-            <p>Selamat Datang Di RP Hotel, Tempat Yang Menyajikan Pengalaman Menginap Yang Tak Terlupakan.</p>
-            <a href="contact.html" class="btn-book">Pesan Sekarang</a>
-        </div>
-    </section>
 
     <!-- Footer -->
-    <footer>
-        <div class="container">
-            <p>&copy; 2024 RP Hotel. Semua Hak Dilindungi.</p>
+    <footer class="bg-dark text-white py-4">
+        <div class="container text-center">
+            <p class="mb-0">&copy; 2024 RP Hotel. Semua Hak Dilindungi.</p>
         </div>
     </footer>
+
+    <!-- Tambahkan Bootstrap JavaScript -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
