--- a/kontak.html
+++ b/kontak.html
@@ -36,39 +36,26 @@
 <a href="contact.html" class="btn-book">Pesan Sekarang</a>
 </div>
 </header>
-<main>
-    <section id="kegiatan" class="kegiatan">
-        <h2>Fasilitas</h2>
-        <p>RP HOTEL Memiliki Beberapa Fasilitas. Berikut adalah beberapa Fasilitas RP HOTEL:</p>
-        <ul>
-            <section id="gallery" class="gallery">
-                <div class="container">
-                    <h2>Fasilitas</h2>
-                    <div class="gallery-images">
-                    </figure>
-                        <img src="kolam.jpg" alt="Kolam Renang RP HOTEL">
-                        <figcaption>Kolam Renang RP HOTEL</figcaption>
-                    </figure>
-                    <figure>
-                        <img src="spa.jpeg" alt="SPA RP HOTEL">
-                        <figcaption>SPA RP HOTEL </figcaption>
-                    </figure>
-                    <figure>
-                        <img src="gym.jpeg" alt="Pusat Kebugaran ">
-                        <figcaption>Pusat Kebugaran RP Hotel </figcaption>
-                    </figure>
-                    <figure>
-                        <img src="resto.jpeg" alt="Resto RP Hotel Menyediakan makanan internasional">
-                        <figcaption>Resto RP Hotel Menyediakan makanan internasional </figcaption>
-                    </figure>
-                    
-            </section>
-                          
+<!-- Contact Section -->
+<section id="contact" class="contact">
+    <div class="container">
+        <h2>Kontak Kami</h2>
+        <form action="#" method="post">
+            <label for="name">Nama:</label>
+            <input type="text" id="name" name="name" required>
+
+            <label for="email">Email:</label>
+            <input type="email" id="email" name="email" required>
+
+            <label for="message">Pesan:</label>
+            <textarea id="message" name="message" rows="4" required></textarea>
+
+            <button type="submit" class="btn-submit">Kirim Pesan</button>
+        </form>
+    </div>
+</section>
+
 <!-- Footer -->
 <footer>
     <div class="container">
-        <p>&copy; 2024 RP HOTEL. Semua Hak Dilindungi.</p> <!-- Menambahkan nama hotel yang konsisten -->
-    </div>
-</footer>
-</body>
-</html>
+        <p>&copy; 2024 [RP Hotel]. Semua Hak Dilindungi.</p>
